// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Keyword 1`] = `
<strong
  className="ola_keyword"
>
  <span
    className="ola_keyword-text"
  >
    Test
  </span>
</strong>
`;

exports[`Keyword with button 1`] = `
<strong
  className="ola_keyword test"
>
  <span
    className="ola_keyword-text"
  >
    Test
  </span>
  <span
    className="ola_keyword-button"
  >
    <button
      className="ola_button_icon is-normal"
      disabled={false}
      style={
        Object {
          "--base-color": "var(--color-neutral-500)",
          "--busy-color": "var(--color-neutral-600)",
          "--disabled-color": "var(--color-neutral-300)",
          "--shadow-focus": "var(--shadow-focus-neutral)",
        }
      }
    />
  </span>
</strong>
`;

exports[`Keyword with extraClass 1`] = `
<strong
  className="ola_keyword test"
>
  <span
    className="ola_keyword-text"
  >
    Test
  </span>
</strong>
`;
